// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextField Default 1`] = `
<div
  className="sc-eNQAEJ hdXQwO"
  disabled={false}
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <div
    className="sc-ckVGcZ bUDAVg"
    disabled={false}
  >
    <span
      className="sc-jKJlTe eFYypy"
    >
      Username
    </span>
  </div>
  <div
    className="sc-bwzfXH grkVqn"
  >
    <input
      className="sc-dxgOiQ dxkTXN"
      disabled={false}
      id={undefined}
      name="firstname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <div
      className="sc-bwzfXH iOPxsx"
    />
  </div>
  <div
    className="sc-ckVGcZ bUDAVg"
    disabled={false}
  >
    <span
      className="sc-jKJlTe eFYypy"
    >
      $
    </span>
  </div>
</div>
`;

exports[`Storyshots TextField With Currency formatting 1`] = `
Array [
  <div
    className="sc-eNQAEJ hdXQwO"
    disabled={false}
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-ckVGcZ bUDAVg"
      disabled={false}
    >
      <span
        className="sc-jKJlTe eFYypy"
      >
        $
      </span>
    </div>
    <div
      className="sc-bwzfXH grkVqn"
    >
      <input
        className="sc-dxgOiQ dxkTXN"
        disabled={false}
        id={undefined}
        name="first name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="10.00"
      />
      <div
        className="sc-bwzfXH iOPxsx"
      />
    </div>
  </div>,
  <div
    className="sc-bwzfXH gKGSfm"
  >
    <p
      className="sc-bxivhb bfQmQc"
    >
      <span
        className="sc-htpNat frObKr"
      >
        <span
          className="sc-htpNat hKonPW"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat frObKr"
        >
          The reported value of this field is: 10
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Feedback 1`] = `
Array [
  <div
    className="sc-eNQAEJ hdXQwO"
    disabled={false}
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-ckVGcZ bUDAVg"
      disabled={false}
    >
      <span
        className="sc-jKJlTe eFYypy"
      >
        Username
      </span>
    </div>
    <div
      className="sc-bwzfXH grkVqn"
    >
      <input
        className="sc-dxgOiQ dxkTXN"
        disabled={false}
        id={undefined}
        name="firstname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="sc-bwzfXH iOPxsx"
      />
    </div>
    <div
      className="sc-ckVGcZ bUDAVg"
      disabled={false}
    >
      <span
        className="sc-jKJlTe eFYypy"
      >
        $
      </span>
    </div>
  </div>,
  <div
    className="sc-bwzfXH gKGSfm"
  >
    <p
      className="sc-bxivhb gWsGB"
    >
      <span
        className="sc-htpNat frObKr"
      >
        <span
          className="sc-htpNat hKonPW"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat frObKr"
        >
          This is a feedback message
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Number formatting 1`] = `
<div
  className="sc-eNQAEJ hdXQwO"
  disabled={false}
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <div
    className="sc-bwzfXH grkVqn"
  >
    <input
      className="sc-dxgOiQ dxkTXN"
      disabled={false}
      id={undefined}
      name="min value"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="10"
    />
    <div
      className="sc-bwzfXH iOPxsx"
    />
  </div>
</div>
`;
